Revision history for Bytes::Random::Secure

0.22 2013-01-25 (Draft)
  - POD correction -- Removed reference to config_seed.

0.21 2013-01-24
  - All functions and methods will now throw an exception if the byte-count
    parameter is passed something that doesn't look like an integer >= 0.
  - examples/*.pl updated to demonstrate new features.
  - Remove silly check for "bag" strings longer than 2**32.
  - Eliminate a line of unreachable code from _closest_divisor().
  - Test coverage is now 100%.

0.20 2013-01-24
  - This is a major release.  Much thanks to Dana Jacobson for his ideas,
    suggestions, code reviews, and for writing Crypt::Random::Seed.
  - Major refactoring / rewrite.
  - Built an OO base layer over which the functions interface is a thin wrapper.
  - OO interface exposed publically.
  - Documented all functions. (POD)
  - removed config_seed() (never publically released).
  - Seed defaults for both interfaces are 256 bits.
  - Major enhancements to test suite. (Coverage is 99.3%)
  - ALL OF THE FOLLOWING CHANGES ARE FROM (UNRELEASED) 0.13:
  - * Compatible with Perl 5.6.
  - * Dropped Crypt::Random::Source dependency in favor of Crypt::Random::Seed.
  - * Seeding is lazy.
  - * Minimum seed size: 2-longs (64 bits).  Maximum, 16 longs (512 bits).
  - * Documented how to configure seeding.

0.13 2013-01-15 (Never released)
  - POD clarification, enhancement.
  - Improved backwards compatibility support for Perl v5.6.x.
  - Eliminated Crypt::Random::Source dependency in favor of Crypt::Random::Seed;
    Thanks to Dana Jacobsen for creating that light-weight and powerful tool.
  - Added some seed tests.
  - Made Test::Pod::Coverage a 'RELEASE_TESTING' only test.
  - Made seeding and RNG-instantiation "lazy" so that
    "use Bytes::Random::Secure;" only drains system entropy if random bytes are
    actually requested.  (Thanks again to Dana Jacobsen for the idea).
  - Modified _seed() to pass seed configuration through to Crypt::Random::Seed's