@@ -19,6 +19,7 @@ t/11-load.t
 t/20-functions.t
 t/21-bytes_random_tests.t
 t/22-random_string_from.t
+t/23-string_from_unicode.t
 t/24-oo_construct.t
 t/26-oo_public.t
 examples/random-sha512.pl
