@@ -4,9 +4,9 @@ author:
   - 'David Oswald <davido@cpan.org>'
 build_requires:
   Test::More: 0.98
-  Test::Warn: 0
+  Test::Warn: 0.24
 configure_requires:
-  ExtUtils::MakeMaker: 0
+  ExtUtils::MakeMaker: 6.56
 dynamic_config: 1
 generated_by: 'ExtUtils::MakeMaker version 6.6302, CPAN::Meta::Converter version 2.120921'
 license: perl
@@ -22,8 +22,9 @@ requires:
   Carp: 0
   Crypt::Random::Seed: 0
   MIME::Base64: 0
-  MIME::QuotedPrint: 0
+  MIME::QuotedPrint: 3.03
   Math::Random::ISAAC: 0
-  Scalar::Util: 0
+  Scalar::Util: 1.21
   perl: 5.006000
+resources: {}
 version: 0.21
